# ImageBasedModellingEdu

./: .gitignore  CMakeLists.txt  points.ply
examples/: CMakeLists.txt
examples/data/sequence_output/: surface-L2-10.ply  surface-L2-20.ply  surface-L2-30.ply  surface-L2-40.ply  surface-L2-50-clean.ply  surface-L2-50.ply  surface-L2-clean.ply  surface-L2.ply  surface-L20-clean.ply  surface-L20.ply  surface-L210.ply  surface-L220.ply  surface-L230.ply  surface-L240.ply  surface-L250-clean.ply  surface-L250.ply  synth_0.out
examples/data/sequence_output/views/view_0000.mve/: depth-L2.mvei  meta.ini
examples/data/sequence_output/views/view_0001.mve/: depth-L2.mvei  meta.ini
examples/data/sequence_output/views/view_0002.mve/: depth-L2.mvei  meta.ini
examples/data/sequence_output/views/view_0003.mve/: meta.ini  (+1 more)
examples/task1/: CMakeLists.txt  task1-4_test_fundamental_ransac.cc  task1_test_math_basic.cc  task2_test_camera.cc  task4_test_fundamental_8_point.cc  task6_test_pose_from_fundamental.cc
examples/task2/: CMakeLists.txt  task2-1_test_triangle.cc  task2-2_test_p3p_kneip.cc  task2-2_test_p3p_ransac.cc  task2-3_test_lm_optimize.cc  task2-4_test_jacobian.cc  task2-5_test_bundle_adjustment.cc  test_ba.txt
examples/task3/: CMakeLists.txt
examples/task4/: CMakeLists.txt  class5_scene2pset_single_view.cc  task4-1_scene2pset_single_view.cc  task4-2_scene2pset_multi_views.cc
examples/task6/: CMakeLists.txt  task6-1_surface_reconstruction.cc
features/: matching.h
sfm/: CMakeLists.txt
surface/: iso_octree.h  octree.cc
texturing/: global_seam_leveling.cpp
(+6 files in other folders)
